--- a/menu.html
+++ b/menu.html
@@ -3,16 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menù Fra Pappina</title>
+    <title>Menù  Fra Pappina</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="menu-container">
         <h1>Menù</h1>
-        <div id="menu"></div>
+        
+        <h2>Antipasti</h2>
+        <div class="menu-item">
+            <h3>Bruschette</h3>
+            <p>Pane tostato con pomodoro fresco e basilico</p>
+            <p><strong>4.00 €</strong></p>
+        </div>
+        <div class="menu-item">
+            <h3>Patatine Fritte</h3>
+            <p>Patate croccanti con salsa a scelta</p>
+            <p><strong>3.50 €</strong></p>
+        </div>
+
+        <h2>Pollo</h2>
+        <div class="menu-item">
+            <h3>Pollo Fritto</h3>
+            <p>Croccante e dorato, con contorno di patatine</p>
+            <p><strong>7.00 €</strong></p>
+        </div>
+        <div class="menu-item">
+            <h3>Ali di Pollo</h3>
+            <p>Ali speziate e fritte</p>
+            <p><strong>6.50 €</strong></p>
+        </div>
+
+        <h2>Pizze</h2>
+        <div class="menu-item">
+            <h3>Pizza Margherita</h3>
+            <p>Pomodoro, mozzarella, basilico</p>
+            <p><strong>5.00 €</strong></p>
+        </div>
+        <div class="menu-item">
+            <h3>Pizza Diavola</h3>
+            <p>Pomodoro, mozzarella, salame piccante</p>
+            <p><strong>6.50 €</strong></p>
+        </div>
+        <div class="menu-item">
+            <h3>Pizza Quattro Stagioni</h3>
+            <p>Pomodoro, mozzarella, funghi, prosciutto, carciofi, olive</p>
+            <p><strong>7.00 €</strong></p>
+        </div>
+
+        <h2>Bibite</h2>
+        <div class="menu-item">
+            <h3>Coca-Cola</h3>
+            <p>Lattina 33cl</p>
+            <p><strong>2.00 €</strong></p>
+        </div>
+        <div class="menu-item">
+            <h3>Acqua Naturale</h3>
+            <p>Bottiglia 50cl</p>
+            <p><strong>1.00 €</strong></p>
+        </div>
+
         <a class="menu-button" href="index.html">⬅ Torna Indietro</a>
     </div>
-
-    <script src="menu.js"></script>
 </body>
 </html>
