--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <div class="main-container">
         <div class="logo-container">
-            <img src="img/logo.jpg" alt="Fra Pappina Logo">
+            <img src="img/logo.jpg" alt="Fra Pappina Logo" class="logo">
         </div>
-        <h1>FRA PAPPINA</h1>
+        <h1 class="title">Fra Pappina</h1>
+        <p class="subtitle">Pizzeria & Polleria</p>
         <div class="buttons">
             <a href="menu.html" class="menu-button">🍕 Mostra Menù</a>
             <a href="orari.html" class="menu-button">🕒 Orari</a>
