--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo-container">
             <img src="img/logo.jpg" alt="Fra Pappina Logo" class="logo">
         </div>
-        <h1 class="title">Fra Pappina</h1>
+        <h1 class="title">Inaugurazione 28 Agosto 2025</h1>
         <p class="subtitle">Pizzeria & Polleria</p>
         <div class="buttons">
             <a href="menu.html" class="menu-button">🍕 Mostra Menù</a>
