--- a/orari.html
+++ b/orari.html
@@ -9,7 +9,7 @@
 <body>
     <div class="menu-container">
         <h1>Orari di Apertura</h1>
-        <p><strong>Lunedì - Domenica:</strong> 12:00 - 23:00</p>
+        <p><strong>Martedì - Domenica:</strong> 18:00 - 23:00</p>
         <a class="menu-button" href="https://maps.app.goo.gl/mieFh3kvp9G5U7WT7" target="_blank">📍 Apri in Google Maps</a>
         <a class="menu-button" href="index.html">⬅ Torna Indietro</a>
     </div>
